--- a/ar-tist-canvas/app/public/index.html
+++ b/ar-tist-canvas/app/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
+    <title>Ar-tist Canvas</title>
   </head>
   <body>
     <div id="root"></div>
